ConfigArray type, favorites tab UIm removed gtk-assets files.
config.c & config.h:
# Added new type: ConfigArray (char*).
# Renamed functions:
    # change_value_in_config => config_change_value
    # get_value_from_config => config_get_value
# Added new functions for new type:
    # char** config_array_parse(ConfigArray _config_array)
    # size_t config_array_get_length(ConfigArray _config_array)
    # ConfigArray config_array_add_item(ConfigArray config_array, char* _item, int where)
    # ConfigArray config_array_make(char* elements[], size_t num_entries)
    # ConfigArray config_array_remove_item(ConfigArray _config_array, int index)

string.c & string.h:
# Added new files.
# Added new functions:
    # char* string_remove_first_last_char(char* source)
    # char* string_make_config_string(const char* string)
    # char* string_replace_semicolons(char* source)

gtk-assets.c & gtk-assets.h:
# Files deleted.

CMakeLists.txt:

Signed-off-by: Dmitry Lyubimcev <dzone@danwin1210.de>
# Added executable for string.h & string.c; removed executable for gtk-assets.c & gtk-assets.h

--- a/usr/share/samp-linux/interface/main.ui
+++ b/usr/share/samp-linux/interface/main.ui
@@ -9,12 +9,59 @@
         <property name="page">3</property>
         <property name="tab-pos">left</property>
         <child>
-          <object class="GtkBox"/>
-        </child>
-        <child>
           <object class="GtkBox">
             <property name="orientation">vertical</property>
+            <child>
+              <object class="GtkListBox">
+                <child>
+                  <object class="GtkEntry"/>
+                </child>
+              </object>
+            </child>
+            <child>
+              <object class="GtkEntry"/>
+            </child>
+            <child>
+              <object class="GtkBox" id="favorites_tab_bottom_box">
+                <property name="baseline-position">bottom</property>
+                <property name="spacing">1</property>
+                <property name="valign">end</property>
+                <property name="vexpand">True</property>
+                <child>
+                  <object class="GtkEntry" id="entry_add_server">
+                    <property name="accessible-role">option</property>
+                    <property name="hexpand">True</property>
+                    <property name="margin-bottom">5</property>
+                    <property name="margin-end">5</property>
+                    <property name="margin-start">5</property>
+                    <property name="margin-top">5</property>
+                    <property name="placeholder-text">Server Address</property>
+                    <property name="tooltip-markup">Server Address</property>
+                    <property name="tooltip-text">Server Address</property>
+                  </object>
+                </child>
+                <child>
+                  <object class="GtkButton" id="button_add_server">
+                    <property name="label">Add</property>
+                    <property name="margin-bottom">5</property>
+                    <property name="margin-end">5</property>
+                    <property name="margin-top">5</property>
+                  </object>
+                </child>
+                <child>
+                  <object class="GtkButton" id="button_connect_to_server">
+                    <property name="label">Connect</property>
+                    <property name="margin-bottom">5</property>
+                    <property name="margin-end">5</property>
+                    <property name="margin-top">5</property>
+                  </object>
+                </child>
+              </object>
+            </child>
           </object>
+        </child>
+        <child>
+          <object class="GtkBox"/>
         </child>
         <child>
           <object class="GtkBox"/>
